--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -15,29 +15,23 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
-        android:text="@string/add_note"
+        android:text="@string/new_task"
         android:textSize="24sp" />
 
-<!--    <ImageView-->
-<!--        android:id="@+id/saveButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignTop="@+id/addNoteHeading"-->
-<!--        android:layout_alignParentEnd="true"-->
-<!--        android:layout_marginEnd="6dp"-->
-<!--        android:src="@drawable/baseline_check_24" />-->
-
-    <EditText
+    <Spinner
         android:id="@+id/noteTitle"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_below="@+id/addNoteHeading"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/note_border"
         android:hint="@string/enter_the_title"
         android:maxLines="1"
         android:padding="12dp"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:entries="@array/catNames"/>
+
+
 
     <EditText
         android:id="@+id/noteContent"
@@ -59,7 +53,7 @@
         android:layout_below="@+id/noteContent"
         android:padding="18dp"
         android:layout_marginTop="32dp"
-        android:text="@string/create_note"
+        android:text="@string/create"
         app:cornerRadius="8dp" />
 
 </RelativeLayout>
