--- a/app/src/main/res/layout/activity_notes_overview.xml
+++ b/app/src/main/res/layout/activity_notes_overview.xml
@@ -22,6 +22,6 @@
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
         android:src="@drawable/baseline_add_24"
-        android:contentDescription="@string/create_note" />
+        android:contentDescription="@string/create" />
 
 </RelativeLayout>
