--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
     <style name="Theme.TaskManagerApp.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+<!--        <item name="android:windowBackground">@color/main</item>-->
     </style>
 
     <style name="Theme.TaskManagerApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
