--- a/app/src/main/res/drawable/priority_major_24.xml
+++ b/app/src/main/res/drawable/priority_major_24.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
 android:height="24dp"
-android:tint="#A28334"
+android:tint="#FFEB3B"
 android:viewportHeight="24"
 android:viewportWidth="24"
 android:width="24dp">
