--- a/app/src/main/res/layout/activity_tasks_overview.xml
+++ b/app/src/main/res/layout/activity_tasks_overview.xml
@@ -26,6 +26,7 @@
             android:layout_weight="4"
             android:text="Sorting"
             android:textAlignment="textEnd"
+            android:clickable="false"
             style="@style/Widget.MaterialComponents.Button.TextButton"/>
 
         <!-- Кнопки с иконками -->
