--- a/app/src/main/res/drawable/task_border.xml
+++ b/app/src/main/res/drawable/task_border.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/main" />
     <stroke
         android:width="1dp"
-        android:color="@color/black" />
+        android:color="@color/task_border" />
     <corners android:radius="8dp" />
 
 </shape>
