--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -10,7 +10,7 @@
     tools:context=".ui.AddTaskActivity">
 
     <TextView
-        android:id="@+id/addTaskHeading"
+        android:id="@+id/newTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -20,9 +20,10 @@
 
     <Spinner
         android:id="@+id/taskTitle"
+        style="@style/CustomSpinnerStyle"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@+id/addTaskHeading"
+        android:layout_below="@+id/newTask"
         android:layout_marginTop="15dp"
         android:background="@drawable/task_border"
         android:hint="@string/enter_the_title"
@@ -31,7 +32,19 @@
         android:textSize="20sp"
         android:entries="@array/tasks"/>
 
-
+    <Spinner
+        android:id="@+id/taskPriority"
+        style="@style/CustomSpinnerStyle"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/taskTitle"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/task_border"
+        android:hint="@string/enter_the_title"
+        android:maxLines="1"
+        android:padding="12dp"
+        android:textSize="20sp"
+        android:entries="@array/priority"/>
 
     <EditText
         android:id="@+id/taskContent"
@@ -39,7 +52,7 @@
         android:layout_height="360dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/task_border"
-        android:layout_below="@+id/taskTitle"
+        android:layout_below="@+id/taskPriority"
         android:gravity="top"
         android:hint="@string/enter_the_description"
         android:padding="12dp"
